--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Save
                     </button>
 
-                    <p class="text-danger pHidden"><span class="fw-bold ">#</span>Please enter a number!</p>
+                    <p id="alert2" class="text-danger pHidden"><span class="fw-bold ">#</span>Please enter a positive number! <br> And set your income balance Exactly!</p>
                 </div>
 
 
