resopnsive for mobile

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <h2 class="text-center text-info mb-3 display-5 mt-3 "><span class="fw-bold">M</span>oneyCal</h2>
 
         <div class="row mx-0">
-            <div id="image" class="col-6 ">
+            <div id="image" class="col-sm-6 ">
                 <img class="img-fluid" src="./image/counting.jpg" alt="Counting Monye">
             </div>
-            <div id="Calc" class="col-6 text-center bgColor">
+            <div id="Calc" class="col-sm-6 text-center bgColor">
                 <h4 class="my-3"><span class="border-bottom border-2 border-danger">Income</span></h4>
                 
                  <div class="row ms-5">
@@ -42,7 +42,7 @@
                         <input id="cloths_ExpensesInput" type="text" class="col-6 border rounded border-primary "   placeholder="$">
                     </div>
                  </div>
-                 <p id="alert" class="text-danger pHidden"><span class="fw-bold ">#</span> You should enter the correct amount for <span class="fw-bold fs-5">Food</span></p>
+                 <p id="alert" class="text-danger pHidden"><span class="fw-bold ">#</span> You should enter the correct amount for <span class="fw-bold fs-5">Calculate!</span></p>
                  <button id="btnCalculate" class="btn-primary border rounded px-4 py-2 fw-bold mb-4">
                      Calculate
                  </button>
